# dpacalc

./: .gitignore  Kconfig  examplefilter.conf  examplefindfilter.conf
cmake/: FindEigen.cmake
src/: CMakeLists.txt  config.h.in  dpacalc.cpp  dpacalc.h  dpacalc_findfilter.cpp  dpacalc_findfilter.hpp  dpacalc_prog.cpp  dpacalc_prog.hpp  includes.h.in  main.cpp  main.hpp
src/exec/: base.hpp  bbque.cpp  cxx11threads.cpp  cxx11threads.hpp  seq_monocore.cpp
src/filter/: base.hpp  fftfilter.cpp  fftfilter.hpp
src/filter_find/: base.hpp  fftfilter_nary.cpp  fftfilter_nary.hpp
src/filter_prog/: base.hpp  fftfilter_prog.cpp  fftfilter_prog.hpp
src/gen_intermediate_prog/: aes128round1_nosbox_prog.cpp  aes128round1_nosbox_prog.hpp  aes128round1_prog.cpp  aes128round1_prog.hpp  base.hpp
src/gen_powermodel_prog/: base.hpp  hammingweight_prog.cpp  hammingweight_prog.hpp
src/input/: base.hpp  bin1.cpp  bin1.hpp
src/input_find/: base.hpp  bin1_find.cpp  bin1_find.hpp
src/input_prog/: base.hpp  bin1_prog.cpp  bin1_prog.hpp
src/output/: gnuplot_prog.cpp  gnuplot_prog.hpp
src/output_filter/: base.hpp  output_fftfilterconf.cpp  output_fftfilterconf.hpp
src/output_find/: base.hpp  filterhistogram.cpp  filterhistogram.hpp
src/output_prog/: base.hpp  gnuplot_prog.cpp  gnuplot_prog.hpp
src/outputprog/: gnuplot_prog.hpp
src/statisticaltest_prog/: base.hpp  pearson_prog.cpp  pearson_prog.hpp
src/verification/: base.hpp  confidenceinterval.cpp  confidenceinterval.hpp
