project(dpacalc)

cmake_minimum_required(VERSION 2.6)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmake)
INCLUDE (${CMAKE_SOURCE_DIR}/../dpacalc-config.cmake)

find_package(Eigen 3.2.0 REQUIRED)
find_package(TCLAP REQUIRED)
find_package(Boost REQUIRED)
set( CMAKE_CXX_FLAGS "-std=c++0x -Wall -Werror -Wno-uninitialized ${CONFIG_DEBUG_OPTIONS} ${CONFIG_OPTIMIZATION_OPTIONS}")
execute_process( COMMAND gcc -dumpversion OUTPUT_VARIABLE CXX_VERSION )
IF ( ${CXX_VERSION} VERSION_GREATER 4.8.0 OR ${CXX_VERSION} VERSION_EQUAL 4.8.0)
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-local-typedefs")
ENDIF ( ${CXX_VERSION} VERSION_GREATER 4.8.0 OR ${CXX_VERSION} VERSION_EQUAL 4.8.0)
set(inputsources input/${CONFIG_CLASS_INPUT}.cpp)
set(filtersources filter/${CONFIG_CLASS_FILTER}.cpp)
set(keygensources keygen/${CONFIG_CLASS_KEYGEN}.cpp)
set(intermediatesources gen_intermediate/${CONFIG_CLASS_INTERMEDIATE}.cpp)
set(powermodelsources gen_powermodel/${CONFIG_CLASS_POWERMODEL}.cpp)
set(statisticsources statisticaltest/${CONFIG_CLASS_STATISTIC}.cpp)
set(execsources exec/${CONFIG_CLASS_EXEC}.cpp)
set(outputsources output/${CONFIG_CLASS_OUTPUT}.cpp)

include( input/${CONFIG_CLASS_INPUT}.cmake OPTIONAL )
include( filter/${CONFIG_CLASS_FILTER}.cmake OPTIONAL )
include( keygen/${CONFIG_CLASS_KEYGEN}.cmake OPTIONAL )
include( gen_intermediate/${CONFIG_CLASS_INTERMEDIATE}.cmake OPTIONAL )
include( gen_powermodel/${CONFIG_CLASS_POWERMODEL}.cmake OPTIONAL )
include( statisticaltest/${CONFIG_CLASS_STATISTIC}.cmake OPTIONAL )
include( exec/${CONFIG_CLASS_EXEC}.cmake OPTIONAL )
include( output/${CONFIG_CLASS_OUTPUT}.cmake OPTIONAL )



include_directories(${EIGEN_INCLUDE_DIRS} ${TCLAP_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${CMAKE_SOURCE_DIR} ${DPACALC_EXTRA_INCLUDES})
configure_file( config.h.in ${CMAKE_SOURCE_DIR}/config.h)
configure_file( includes.h.in ${CMAKE_SOURCE_DIR}/includes.h)
set(DPACALC_SRCS utils.cpp dpacalc.cpp ${inputsources} ${filtersources} ${keygensources} ${intermediatesources} ${powermodelsources} ${statisticsources} ${execsources}  ${outputsources} )
set(DPACALC_PROG_SRCS utils.cpp dpacalc_prog.cpp ${inputsources} ${filtersources} ${keygensources} ${intermediatesources} ${powermodelsources} ${statisticsources} ${execsources}  ${outputsources} )
add_executable(dpacalc ${DPACALC_SRCS})
add_executable(dpacalc_prog ${DPACALC_PROG_SRCS})
target_link_libraries(dpacalc ${DPACALC_EXTRA_LIBS} ${Boost_LIBRARIES})
target_link_libraries(dpacalc_prog ${DPACALC_EXTRA_LIBS} ${Boost_LIBRARIES})
